--- a/index.html
+++ b/index.html
@@ -134,19 +134,21 @@
       </div><!-- end testimonial -->
     </div><!-- end testimonials -->
 
-    <div class="cta flow">
-      <div class="cta__text flow">
-        <h2>Get early access today</h2>
-        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
-      </div><!-- end cta__text -->
+    <div class="cta-wrapper">
+      <div class="cta flow">
+        <div class="cta__text flow">
+          <h2>Get early access today</h2>
+          <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        </div><!-- end cta__text -->
 
-      <form class="cta__form" novalidate>
-        <label for="email" class="visually-hidden">Please enter your email address</label>
-        <input type="email" name="email" id="email" class="email-input" required>
-        <button class="btn cta__form__btn" type="submit">Get started for free</button>
-      </form><!-- end cta__form -->
-      <p class="error-message">Test</p>
-    </div><!-- end cta -->
+        <form class="cta__form" novalidate>
+          <label for="email" class="visually-hidden">Please enter your email address</label>
+          <input type="email" name="email" id="email" class="email-input" required>
+          <button class="btn cta__form__btn" type="submit">Get started for free</button>
+        </form><!-- end cta__form -->
+        <p class="error-message">Test</p>
+      </div><!-- end cta -->
+    </div><!-- end cta-wrapper -->
 
   </main><!-- end main -->
 
